# Flask-SQLite-REST-API

./: README.md  backendSchema.sql  classification.csv  clone_scraper.py  database.db  database_back.db  init_backend_db.py  init_db.py  main.py  pyproject.toml  rav_test.py  scrap_code.py  searchHistory.db  searchHistoryInit.py  searchHistorySchema.sql  test_scraper.py  zREADME.md
templates/: backendView.html  base.html
